# basedpyright-nested-workspace

./: project.code-workspace
a/: pyproject.toml  pyrightconfig.json
a/src/a/: __init__.py  greet.py
a/tests/: test_greet.py
b/: pyproject.toml
b/src/b/: __init__.py  greet.py
b/tests/: test_greet.py
