[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.4",
]

